# arduino-cli-mcp

./: INSTALLATION.md  README.md  README_zh.md  main.py  pyproject.toml  setup.py
.github/workflows/: publish.yml  release.yml  test.yml
